- Switched to dark window label; - minor borderColor change.

--- a/fluxbox/styles/custom/theme.cfg
+++ b/fluxbox/styles/custom/theme.cfg
@@ -57,24 +57,24 @@ toolbar.workspace.borderColor:          #073642
 # -----------------------------------------------------------------------
 window.justify:                         Left
 window.focus.borderColor:               #93A1A1
-window.unfocus.borderColor:             #839496
+window.unfocus.borderColor:             #93A1A1
 window.label.focus:                     Flat Solid
 window.label.focus.font:                DejaVu Sans:style=Bold:size=8
 window.label.focus.color:               #93a1a1
-#window.label.focus.textColor:           #073642
-window.label.focus.textColor:           #EEE8D5
+window.label.focus.textColor:           #073642
+#window.label.focus.textColor:           #EEE8D5
 window.label.unfocus:                   Flat Solid
 window.label.unfocus.font:              DejaVu Sans:style=Bold:size=8
 window.label.unfocus.color:             #839496
 window.label.unfocus.textColor:         #586e75
 window.button.focus:                    Flat Solid
 window.button.focus.color:              #93a1a1
-#window.button.focus.picColor:           #073642
-window.button.focus.picColor:           #EEE8D5
+window.button.focus.picColor:           #073642
+#window.button.focus.picColor:           #EEE8D5
 window.button.pressed:                  Flat Solid
 window.button.pressed.color:            #657b83
-#window.button.pressed.picColor:         #073642
-window.button.pressed.picColor:         #EEE8D5
+window.button.pressed.picColor:         #073642
+#window.button.pressed.picColor:         #EEE8D5
 window.button.unfocus:                  Flat Solid
 window.button.unfocus.color:            #839496
 window.button.unfocus.picColor:         #586e75
