Header + comment tweaking

--- a/fbpanel.conf
+++ b/fbpanel.conf
@@ -1,7 +1,10 @@
-########################################
-## fbpanel configuration file         ##
-########################################
-
+# ----------------------------------------------------------------------
+#  $RCSfile$
+#
+#  fbpanel configuration file
+#
+#  $Id$
+#
 
 # DESCRIPTION
 # Configuration file consists of mandatory 'Global' block that MUST come first,
