--- a/fluxbox/styles/custom/theme.cfg
+++ b/fluxbox/styles/custom/theme.cfg
@@ -1,30 +1,38 @@
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
+#  $RCSfile$
+#
+#  fluxbox(1) custom theme - All colors match solarized scheme
+#
+#  $Id$
+#
+
+# ----------------------------------------------------------------------
 #  Common
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
 *.font:                                 DejaVu Sans:size=8
 *.bevelWidth:                           0
 *.borderWidth:                          1
 *.textColor:                            #073642
 *.borderColor:                          #EEE8D5
 
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
 #  Background
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
 #background:                            gradient Vertical
 #background.color:                      #073642
 #background.colorTo:                    #586E75
 
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
 #  Slit
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
 slit:                                   Flat Solid
 slit.color:                             #EEE8D5
 slit.borderWidth:                       0
 slit.borderColor:                       #EEE8D5
 
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
 #  Toolbar
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
 toolbar:                                Flat Solid
 toolbar.borderWidth:                    0
 toolbar.height:                         15
@@ -52,9 +60,9 @@ toolbar.workspace:                      ParentRelative
 toolbar.workspace.justify:              Center
 toolbar.workspace.borderColor:          #073642
 
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
 #  Windows
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
 window.justify:                         Left
 window.focus.borderColor:               #93A1A1
 window.unfocus.borderColor:             #93A1A1
@@ -112,9 +120,9 @@ window.rhalf.pixmap:                    rhalf.xpm
 window.rhalf.unfocus.pixmap:            rhalf_unfocus.xpm
 window.rhalf.pressed.pixmap:            rhalf_pressed.xpm
 
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
 #  Menu
-# -----------------------------------------------------------------------
+# ----------------------------------------------------------------------
 menu.*.font:                            DejaVu Sans:size=9
 menu.bevelWidth:                        2
 menu.borderColor:                       #073642
