--- a/ipager.conf
+++ b/ipager.conf
@@ -1,3 +1,11 @@
+# ----------------------------------------------------------------------
+#  $RCSfile$
+#
+#  ipager configuration file
+#
+#  $Id$
+#
+
 icon.spacing:      1
 icon.min_width:    24
 icon.max_width:    24
