--- a/mplayer.config
+++ b/mplayer.config
@@ -1,4 +1,10 @@
-# mplayer configuration file
+# ----------------------------------------------------------------------
+#  $RCSfile$
+#
+#  mplayer configuration file
+#
+#  $Id$
+#
 
 # Priority list of audio output drivers to be used
 ao=sndio
