--- a/netwmpager.conf
+++ b/netwmpager.conf
@@ -1,3 +1,11 @@
+# ----------------------------------------------------------------------
+#  $RCSfile$
+#
+#  netwmpager configuration file
+#
+#  $Id$
+#
+
 # desktop layout
 # set both to -1 to use default values (set by window manager)
 cols = -1
