--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,11 @@
+# ----------------------------------------------------------------------
+#  $RCSfile$
+#
+#  tmux configuration file
+#
+#  $Id$
+#
+
 # No login shell
 # Note: Well, I'm now convinced that tmux shells *should* be login
 # shells # (consider what happens if you exit from X after having
