--- a/xombrero.conf
+++ b/xombrero.conf
@@ -1,3 +1,11 @@
+# ----------------------------------------------------------------------
+#  $RCSfile$
+#
+#  xombrero configuration file
+#
+#  $Id$
+#
+
 ##
 ## GENERAL SETTINGS
 ##
