copy-mode-vi settings update

--- a/tmux.conf
+++ b/tmux.conf
@@ -47,9 +47,9 @@ set-option -g history-limit 15360
 set-window-option -g mode-keys vi
 #unbind-key '['
 bind-key 'Escape' copy-mode
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'r' rectangle-toggle
-bind-key -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'r' send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 #unbind-key ']'
 bind-key 'p' paste-buffer
 
