--- a/tmux.conf
+++ b/tmux.conf
@@ -117,29 +117,25 @@ bind-key 'C-s' set-window-option synchronize-panes \; display-message "Switching
 
 #### Color scheme
 
-# Default statusbar colors
-set-option -g status-bg white
-set-option -g status-fg black
-set-option -g status-attr default
+# Default statusbar style
+set-option -g status-style fg=black,bg=white,none
 
-# Default window title colors
-set-window-option -g window-status-fg default
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr default
+# Default window title style
+set-window-option -g window-status-style fg=default,bg=default,none
 
-# Active window title colors
-set-window-option -g window-status-current-fg red
-set-window-option -g window-status-current-bg brightwhite
-set-window-option -g window-status-current-attr default
+# Active window title style
+set-window-option -g window-status-current-style fg=red,bg=white,none
+
+# Window with bell/activity title style
+set-window-option -g window-status-activity-style fg=cyan,bg=default,none
+set-window-option -g window-status-bell-style fg=cyan,bg=default,none
 
 # Pane border
 set-option -g pane-border-fg default
 set-option -g pane-active-border-fg brightred
 
-# Message text
-set-option -g message-bg white
-set-option -g message-fg black
-set-option -g message-attr default
+# Message text style
+set-option -g message-style fg=black,bg=white,none
 
 # Pane number display
 set-option -g display-panes-active-colour brightred
