Use defaults for ao and vo options; 2 threads for lavd

--- a/mplayer.config
+++ b/mplayer.config
@@ -5,7 +5,7 @@
 # ----------------------------------------------------------------------
 
 # Priority list of audio output drivers to be used
-ao=sndio
+#ao=sndio
 #ao=sdl
 
 # Priority list of video output drivers to be used
@@ -14,7 +14,7 @@ ao=sndio
 # Video output driver:
 # - OpenGL, simple version, YUV to RGB conversion uses a fragment
 #   program with additional lookup
-vo=gl:yuv=6
+#vo=gl:yuv=6
 
 # Double buffering fixes flicker by storing two frames in memory
 # and displaying one while decoding another
@@ -48,7 +48,7 @@ cache-min=20
 #   - skips decoding of frames completely (useless processing steps
 #     only)
 #lavdopts=threads=2
-lavdopts=threads=4:skiploopfilter=default:fast=1:skipframe=default
+lavdopts=threads=2:skiploopfilter=default:fast=1:skipframe=default
 #lavdopts=threads=2:skiploopfilter=all:fast=1:skipframe=nonref
 
 # Disable xscreensaver
