Reverting ao and vo settings to r1.3 (wrong assumption: defaults don\'t work properly)

--- a/mplayer.config
+++ b/mplayer.config
@@ -5,8 +5,7 @@
 # ----------------------------------------------------------------------
 
 # Priority list of audio output drivers to be used
-#ao=sndio
-#ao=sdl
+ao=sndio
 
 # Priority list of video output drivers to be used
 #vo=gl,sdl,xv,x11
@@ -14,7 +13,7 @@
 # Video output driver:
 # - OpenGL, simple version, YUV to RGB conversion uses a fragment
 #   program with additional lookup
-#vo=gl:yuv=6
+vo=gl:yuv=6
 
 # Double buffering fixes flicker by storing two frames in memory
 # and displaying one while decoding another
