--- a/tmux.conf
+++ b/tmux.conf
@@ -5,13 +5,10 @@
 # ----------------------------------------------------------------------
 
 # No login shell
-# Note: Well, I'm now convinced that tmux shells *should* be login
-# shells # (consider what happens if you exit from X after having
-# launched tmux in an xterm: the session will remain active...)
+# Note: Well, I'm now convinced that tmux shells *should* be login shells
+# (consider what happens if you exit from X after having launched tmux in
+# an xterm: the session will remain active...)
 #set-option -g default-command "$SHELL"
-
-# 256color by default
-#set-option -g default-terminal "screen-256color"
 
 # Set command prefix
 unbind-key C-b
@@ -91,50 +88,44 @@ set-option -g status-position bottom
 set-option -g status-left-length  80
 set-option -g status-right-length 80
 set-option -g status-left '[#S:#I.#P]'
-#set-option -g status-right '[#{pane_current_path}] [#{pane_current_command}] | %a %d/%m (%V) %R'
 set-option -g status-right '#T '
 
 # Mouse suport
 set-option -g mouse off
 
-# Correct the 'colors' entry for terminals which support 88/256 colors,
-# allow xterm titles in terminal window (XT), disable scroll lock
-# on terminal's alternate screen buffer (this gives minimal mouse
-# support for scrolling and works just in a few cases),
-# disable acs support for OpenBSD VT
-#set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:colors=256:XT:smcup@:rmcup@,*vt*:enacs@:smacs@:rmacs@:acsc@'
-set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:colors=256:XT,*vt*:enacs@:smacs@:rmacs@:acsc@'
-
-# Setting overrides for C-Up, C-Down, C-Left, C-Right
-#set-option -g terminal-overrides ',xterm*:XT:smcup@:rmcup@:kUP5=\eOA:kDN5=\eOB:kLFT5=\eOD:kRIT5=\eOC'
+# - Correct the 'colors' entry for terminals which support 88/256 colors;
+# - allow xterm titles in terminal window (XT);
+# - disable acs support for OpenBSD VT.
+# Note: to disable scroll lock on terminal's alternate screen buffer: smcup@:rmcup@;
+# this gives minimal mouse support for scrolling and works just in a few cases
+set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:colors=256:XT,wsvt*:enacs@:smacs@:rmacs@:acsc@'
 
 # Synchronize panes
 bind-key 'C-s' set-window-option synchronize-panes \; display-message "Switching synchronize-panes mode..."
 
-# Generate xterm-style function key sequences
-#set-option -g xterm-keys on
 
+# ----------------------------------------------------------------------
+# Colorscheme
+#
 
-#### Color scheme
-
-# Default statusbar style
+# Statusbar
 set-option -g status-style fg=black,bg=white,none
 
-# Default window title style
-set-window-option -g window-status-style fg=default,bg=default,none
-
-# Active window title style
+# Active window title
 set-window-option -g window-status-current-style fg=red,bg=white,none
 
-# Window with bell/activity title style
+# Window with bell/activity title
 set-window-option -g window-status-activity-style fg=cyan,bg=default,none
 set-window-option -g window-status-bell-style fg=cyan,bg=default,none
+
+# Other windows title
+set-window-option -g window-status-style fg=default,bg=default,none
 
 # Pane border
 set-option -g pane-border-fg default
 set-option -g pane-active-border-fg brightred
 
-# Message text style
+# Message text
 set-option -g message-style fg=black,bg=white,none
 
 # Pane number display
