Fixed ssh agent when tmux is detached

--- a/tmux.conf
+++ b/tmux.conf
@@ -103,6 +103,9 @@ set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:c
 # Synchronize panes
 bind-key 'C-s' set-window-option synchronize-panes \; display-message "Switching synchronize-panes mode..."
 
+# Fix ssh agent when tmux is detached
+setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+
 
 # ----------------------------------------------------------------------
 # Colorscheme
