tmux's pane switching with awareness of vim's splits

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,34 +51,32 @@ bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 bind-key 'p' paste-buffer
 
 # Window selection
-bind-key -n 'C-Right' select-window -t :+1
-bind-key -n 'C-Left'  select-window -t :-1
-
-# Vi-style pane selection
-bind-key 'h' select-pane -L
-bind-key 'j' select-pane -D
-bind-key 'k' select-pane -U
-bind-key 'l' select-pane -R
+bind-key -n 'C-Tab' select-window -t :+1
+bind-key -n 'C->'   select-window -t :+1
+bind-key -n 'C-<'   select-window -t :-1
 
 # Panes layout
-set-window-option -g main-pane-height  35
-set-window-option -g main-pane-width  100
-#bind-key 'M-h' select-layout even-horizontal
-#bind-key 'M-v' select-layout even-vertical
-bind-key 'C-h' select-layout main-horizontal
-bind-key 'C-v' select-layout main-vertical
+bind-key 'h'   select-layout main-horizontal
+bind-key 'v'   select-layout main-vertical
+bind-key 'C-h' select-layout even-horizontal
+bind-key 'C-v' select-layout even-vertical
 bind-key -n 'C-PageUp' resize-pane -Z
 
 # Panes selection and swapping
 set-option -g display-panes-time 5000
-#bind-key -n 'C-,' select-pane -t :.+
-#bind-key -n 'C-.' display-panes \; select-pane -t :.
-bind-key -n 'C-Down' select-pane -t :.+
-bind-key -n 'C-Up'   select-pane -t :.-
 bind-key -n 'C-PageDown' display-panes \; select-pane -t :.
-bind-key K swap-pane -U
-bind-key J swap-pane -D
+#bind-key -n 'C-.' select-pane -t :.+
+#bind-key -n 'C-,' select-pane -t :.-
+bind-key 'k' swap-pane -U
+bind-key 'j' swap-pane -D
 #bind-key -n 'C--' break-pane -d
+
+# Smart pane switching with awareness of vim splits
+bind-key -n 'C-Up'    run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Up'   || tmux select-pane -U"
+bind-key -n 'C-Down'  run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Down' || tmux select-pane -D"
+bind-key -n 'C-Right' run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Right'|| tmux select-pane -R"
+bind-key -n 'C-Left'  run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Left' || tmux select-pane -L"
+bind-key -n 'C-,'     run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-,'    || tmux select-pane -l"
 
 # Set the default working directory for new panes
 #set-option -g default-path ${HOME}
