Key bindings trimming

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,8 +52,8 @@ bind-key 'p' paste-buffer
 
 # Window selection
 bind-key -n 'C-Tab' select-window -t :+1
-bind-key -n 'C->'   select-window -t :+1
-bind-key -n 'C-<'   select-window -t :-1
+bind-key -n 'C-.'   select-window -t :+1
+bind-key -n 'C-,'   select-window -t :-1
 
 # Panes layout
 bind-key 'h'   select-layout main-horizontal
@@ -76,7 +76,7 @@ bind-key -n 'C-Up'    run "(tmux display-message -p '#{pane_current_command}' | 
 bind-key -n 'C-Down'  run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Down' || tmux select-pane -D"
 bind-key -n 'C-Right' run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Right'|| tmux select-pane -R"
 bind-key -n 'C-Left'  run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Left' || tmux select-pane -L"
-bind-key -n 'C-,'     run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-,'    || tmux select-pane -l"
+bind-key -n 'C-\'     run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-\\'   || tmux select-pane -l"
 
 # Set the default working directory for new panes
 #set-option -g default-path ${HOME}
