--- a/tmux.conf
+++ b/tmux.conf
@@ -65,8 +65,6 @@ bind-key -n 'C-PageUp' resize-pane -Z
 # Panes selection and swapping
 set-option -g display-panes-time 5000
 bind-key -n 'C-PageDown' display-panes \; select-pane -t :.
-#bind-key -n 'C-.' select-pane -t :.+
-#bind-key -n 'C-,' select-pane -t :.-
 bind-key 'k' swap-pane -U
 bind-key 'j' swap-pane -D
 #bind-key -n 'C--' break-pane -d
@@ -76,7 +74,7 @@ bind-key -n 'C-Up'    run "(tmux display-message -p '#{pane_current_command}' | 
 bind-key -n 'C-Down'  run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Down' || tmux select-pane -D"
 bind-key -n 'C-Right' run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Right'|| tmux select-pane -R"
 bind-key -n 'C-Left'  run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Left' || tmux select-pane -L"
-bind-key -n 'C-\'     run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-\\'   || tmux select-pane -l"
+bind-key -n 'C-\'     run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-\\'   || tmux select-pane -l || :"
 
 # Set the default working directory for new panes
 #set-option -g default-path ${HOME}
@@ -89,7 +87,17 @@ set-option -g status-left '[#S:#I.#P]'
 set-option -g status-right '#T '
 
 # Mouse suport
-set-option -g mouse off
+set-option -g mouse on
+bind-key -n MouseDrag1Status swap-window -t=
+
+unbind -n -T copy-mode-vi MouseDragEnd1Pane
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel primary > /dev/null"
+
+unbind -T copy-mode-vi Enter
+bind -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel primary > /dev/null"
+
+unbind-key MouseDown2Pane
+bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel primary)\"; tmux paste-buffer"
 
 # - Correct the 'colors' entry for terminals which support 88/256 colors;
 # - allow xterm titles in terminal window (XT);
@@ -110,10 +118,10 @@ setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 #
 
 # Statusbar
-set-option -g status-style fg=black,bg=white,none
+set-option -g status-style fg=black,bg=brightwhite,none
 
 # Active window title
-set-window-option -g window-status-current-style fg=red,bg=white,none
+set-window-option -g window-status-current-style fg=red,bg=brightwhite,none
 
 # Window with bell/activity title
 set-window-option -g window-status-activity-style fg=cyan,bg=default,none
@@ -127,7 +135,7 @@ set-option -g pane-border-fg default
 set-option -g pane-active-border-fg brightred
 
 # Message text
-set-option -g message-style fg=black,bg=white,none
+set-option -g message-style fg=black,bg=brightwhite,none
 
 # Pane number display
 set-option -g display-panes-active-colour brightred
