Use copy-pipe instead of copy-selection in mouse settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -90,14 +90,9 @@ set-option -g status-right '#T '
 set-option -g mouse on
 bind-key -n MouseDrag1Status swap-window -t=
 
-unbind -n -T copy-mode-vi MouseDragEnd1Pane
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel primary > /dev/null"
-
-unbind -T copy-mode-vi Enter
-bind -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel primary > /dev/null"
-
-unbind-key MouseDown2Pane
-bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel primary)\"; tmux paste-buffer"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -selection primary)\"; tmux paste-buffer"
 
 # - Correct the 'colors' entry for terminals which support 88/256 colors;
 # - allow xterm titles in terminal window (XT);
