Added C-l key binding in ksh (vi-mode) to clear screen

--- a/tmux.conf
+++ b/tmux.conf
@@ -104,9 +104,11 @@ set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:c
 # Synchronize panes
 bind-key 'C-s' set-window-option synchronize-panes \; display-message "Switching synchronize-panes mode..."
 
-# Fix ssh agent when tmux is detached
-setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
-
+# Bind C-l in ksh (vi-mode) to "clear screen"
+bind-key -n 'C-l' if-shell "[ \"#{pane_current_command}\" == ksh ]" \
+        'copy-mode ; send-keys -X start-of-line ; send-keys -X next-space ; send-keys -X copy-end-of-line ; \
+         send-keys C-u ; send-keys -R ; send-keys Enter ; paste-buffer -s ""' \
+        'send-keys C-l'
 
 # ----------------------------------------------------------------------
 # Colorscheme
