- Code cleaning; - prefer extended command names to aliases; - status line leading/trailing spaces tweaking; - mouse support improvements; - C-l bind in ksh now use pure vi editing commands; - history access through arrow keys in ksh.

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,12 +42,10 @@ set-option -g history-limit 15360
 
 # Use vi key bindings in copy and choice modes
 set-window-option -g mode-keys vi
-#unbind-key '['
 bind-key 'Escape' copy-mode
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'r' send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
-#unbind-key ']'
 bind-key 'p' paste-buffer
 
 # Window selection
@@ -70,11 +68,11 @@ bind-key 'j' swap-pane -D
 #bind-key -n 'C--' break-pane -d
 
 # Smart pane switching with awareness of vim splits
-bind-key -n 'C-Up'    run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Up'   || tmux select-pane -U"
-bind-key -n 'C-Down'  run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Down' || tmux select-pane -D"
-bind-key -n 'C-Right' run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Right'|| tmux select-pane -R"
-bind-key -n 'C-Left'  run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Left' || tmux select-pane -L"
-bind-key -n 'C-\'     run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-\\'   || tmux select-pane -l || :"
+bind-key -n 'C-Up'    run-shell "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Up'   || tmux select-pane -U"
+bind-key -n 'C-Down'  run-shell "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Down' || tmux select-pane -D"
+bind-key -n 'C-Right' run-shell "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Right'|| tmux select-pane -R"
+bind-key -n 'C-Left'  run-shell "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Left' || tmux select-pane -L"
+bind-key -n 'C-\'     run-shell "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-\\'   || tmux select-pane -l || :"
 
 # Set the default working directory for new panes
 #set-option -g default-path ${HOME}
@@ -83,16 +81,49 @@ bind-key -n 'C-\'     run "(tmux display-message -p '#{pane_current_command}' | 
 set-option -g status-position bottom
 set-option -g status-left-length  80
 set-option -g status-right-length 80
-set-option -g status-left '[#S:#I.#P]'
-set-option -g status-right '#T '
+set-option -g status-left '[#S:#I.#P] '
+set-option -g status-right '#T'
 
 # Mouse suport
 set-option -g mouse on
 bind-key -n MouseDrag1Status swap-window -t=
 
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
-bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -selection primary)\"; tmux paste-buffer"
+bind-key -T copy-mode-vi \
+        Enter send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+
+bind-key -T copy-mode-vi MouseDragEnd1Pane \
+        send-keys -X copy-pipe "xclip -i -selection primary"
+
+bind-key -n DoubleClick1Pane \
+        select-pane \; \
+        copy-mode \; \
+        send-keys -X select-word \; \
+        send-keys -X copy-pipe "xclip -i -selection primary"
+
+bind-key -T copy-mode-vi DoubleClick1Pane \
+        select-pane \; \
+        send-keys -X select-word \; \
+        send-keys -X copy-pipe "xclip -i -selection primary"
+
+bind-key -n TripleClick1Pane \
+        select-pane \; \
+        copy-mode \; \
+        send-keys -X select-line \; \
+        send-keys -X copy-pipe "xclip -i -selection primary"
+
+bind-key -T copy-mode-vi TripleClick1Pane \
+        select-pane \; \
+        send-keys -X select-line \; \
+        send-keys -X copy-pipe "xclip -i -selection primary"
+
+bind-key -n MouseDown2Pane \
+        run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
+        paste-buffer
+
+bind-key -T copy-mode-vi MouseDown2Pane \
+        run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
+        paste-buffer \; \
+        send-keys -X cancel
 
 # - Correct the 'colors' entry for terminals which support 88/256 colors;
 # - allow xterm titles in terminal window (XT);
@@ -107,12 +138,26 @@ bind-key 'C-s' set-window-option synchronize-panes \; display-message "Switching
 # Fix ssh agent when tmux is detached
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 
-
-# Bind C-l in ksh (vi-mode) to "clear screen"
-bind-key -n 'C-l' if-shell "[ \"#{pane_current_command}\" == ksh ]" \
-        'copy-mode ; send-keys -X start-of-line ; send-keys -X next-space ; send-keys -X copy-end-of-line ; \
-         send-keys C-u ; send-keys -R ; send-keys Enter ; paste-buffer -s ""' \
-        'send-keys C-l'
+# Bind some very common key sequences in ksh
+# Note: vi editing mode is assumed here...
+bind-key -n 'C-l' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
+                            [ \"#{pane_current_command}\" == sh ]" \
+' \
+        send-keys Escape 0Diclear Enter Escape pA' \
+' \
+        send-keys C-l'
+bind-key -n 'Up' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
+                            [ \"#{pane_current_command}\" == sh ]" \
+' \
+        send-keys Escape k' \
+' \
+        send-keys Up'
+bind-key -n 'Down' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
+                            [ \"#{pane_current_command}\" == sh ]" \
+' \
+        send-keys Escape j' \
+' \
+        send-keys Down'
 
 # ----------------------------------------------------------------------
 # Colorscheme
