--- a/tmux.conf
+++ b/tmux.conf
@@ -88,11 +88,15 @@ set-option -g status-right '#T'
 set-option -g mouse on
 bind-key -n MouseDrag1Status swap-window -t=
 
-bind-key -T copy-mode-vi \
-        Enter send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+bind-key -T copy-mode-vi Enter \
+        send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
 
 bind-key -T copy-mode-vi MouseDragEnd1Pane \
         send-keys -X copy-pipe "xclip -i -selection primary"
+
+bind-key -T copy-mode-vi MouseDown1Pane \
+        select-pane \; \
+        send-keys -X clear-selection
 
 bind-key -n DoubleClick1Pane \
         select-pane \; \
@@ -115,6 +119,10 @@ bind-key -T copy-mode-vi TripleClick1Pane \
         select-pane \; \
         send-keys -X select-line \; \
         send-keys -X copy-pipe "xclip -i -selection primary"
+
+bind-key -T copy-mode-vi MouseDown1Pane \
+        select-pane \; \
+        send-keys -X clear-selection
 
 bind-key -n MouseDown2Pane \
         run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
