Effective use of left/right arrow keys in ksh when in vi mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -166,6 +166,18 @@ bind-key -n 'Down' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
         send-keys Escape j' \
 ' \
         send-keys Down'
+bind-key -n 'Left' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
+                            [ \"#{pane_current_command}\" == sh ]" \
+' \
+        send-keys Escape h' \
+' \
+        send-keys Left'
+bind-key -n 'Right' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
+                            [ \"#{pane_current_command}\" == sh ]" \
+' \
+        send-keys Escape l' \
+' \
+        send-keys Right'
 
 # ----------------------------------------------------------------------
 # Colorscheme
