Remove "Comment" field

--- a/desktop-files/removables.desktop
+++ b/desktop-files/removables.desktop
@@ -1,8 +1,7 @@
 [Desktop Entry]
 Version=1.0
-Name=Removable Devices
-GenericName=Removable Devices
-Comment=Manage removable devices
+Name=Manage Removable Devices
+GenericName=Manage Removable Devices
 Exec=doas /usr/local/bin/amount -e /dev/sd0
 Icon=media-removable
 Terminal=false
