--- a/desktop-files/session-logout.desktop
+++ b/desktop-files/session-logout.desktop
@@ -1,8 +1,7 @@
 [Desktop Entry]
 Version=1.0
-Name=Session Logout
-GenericName=Session Logout
-Comment=Logout from X session
+Name=Logout from X session
+GenericName=Logout from X session
 Exec=session-logout
 Icon=exit
 Terminal=false
