--- a/desktop-files/wm_root_menu.desktop
+++ b/desktop-files/wm_root_menu.desktop
@@ -1,7 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Name=Window Manager Root Menu
-GenericName=Window Manager Root Menu
+Name=Root Menu
 Exec=xdotool key Super_L+space
 Icon=/home/just22/.local/share/icons/puf100X86.png
 Terminal=false
