--- a/tmux.conf
+++ b/tmux.conf
@@ -91,42 +91,41 @@ bind-key -n MouseDrag1Status swap-window -t=
 bind-key -T copy-mode-vi Enter \
         send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
 
+bind-key -T copy-mode-vi Escape \
+        send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+
 bind-key -T copy-mode-vi MouseDragEnd1Pane \
         send-keys -X copy-pipe "xclip -i -selection primary"
 
 bind-key -T copy-mode-vi MouseDown1Pane \
         select-pane \; \
-        send-keys -X clear-selection
+        send-keys -X cancel
 
-bind-key -n DoubleClick1Pane \
-        select-pane \; \
-        copy-mode \; \
-        send-keys -X select-word \; \
-        send-keys -X copy-pipe "xclip -i -selection primary"
+# bind-key -n DoubleClick1Pane \
+#         select-pane \; \
+#         copy-mode \; \
+#         send-keys -X select-word \; \
+#         send-keys -X copy-pipe "xclip -i -selection primary"
 
 bind-key -T copy-mode-vi DoubleClick1Pane \
         select-pane \; \
         send-keys -X select-word \; \
         send-keys -X copy-pipe "xclip -i -selection primary"
 
-bind-key -n TripleClick1Pane \
-        select-pane \; \
-        copy-mode \; \
-        send-keys -X select-line \; \
-        send-keys -X copy-pipe "xclip -i -selection primary"
+# bind-key -n TripleClick1Pane \
+#         select-pane \; \
+#         copy-mode \; \
+#         send-keys -X select-line \; \
+#         send-keys -X copy-pipe "xclip -i -selection primary"
 
 bind-key -T copy-mode-vi TripleClick1Pane \
         select-pane \; \
         send-keys -X select-line \; \
         send-keys -X copy-pipe "xclip -i -selection primary"
 
-bind-key -T copy-mode-vi MouseDown1Pane \
-        select-pane \; \
-        send-keys -X clear-selection
-
-bind-key -n MouseDown2Pane \
-        run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
-        paste-buffer
+# bind-key -n MouseDown2Pane \
+#         run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
+#         paste-buffer
 
 bind-key -T copy-mode-vi MouseDown2Pane \
         run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
