- height 19 -> 20; - modified action for main menu and X client list; - tclock plugin disabled.

--- a/fbpanel.conf
+++ b/fbpanel.conf
@@ -113,7 +113,7 @@ Global {
     margin = 0
     widthtype = percent
     width = 100
-    height = 19
+    height = 20
     transparent = false
     tintcolor = #839496
     alpha = 0
@@ -139,7 +139,7 @@ Plugin {
         button {
             image = /home/just22/.local/share/icons/puf100X86.png
             tooltip = Main menu
-            action = xdotool key Super_L+s
+            action = xdotool key Super_L+space
         }
     }
 }
@@ -194,7 +194,7 @@ Plugin {
             icon = desktop
             tooltip = X clients list
             #action = xdotool mousemove 2 19 key Super_L+w mousemove restore
-            action = xdotool key Super_L+w
+            action = xdotool key Super_L+l
         }
     }
 }
@@ -337,19 +337,19 @@ Plugin {
 # ShowCalendar: (boolean) Show a GTK calendar widget when the clock is
 #               clicked.  Only valid if Action is unset.
 # ShowTooltip: (boolean) Show tooltip for clock.
-Plugin {
-    type = tclock
-    config {
-        ClockFmt = <span font="DejaVu Sans Mono 8">%a %d/%m (%V) %R</span>
-        #ClockFmt = %a %d/%m (%V) %R
-        # 2 line view, time in bold above and date below
-        # ClockFmt = <span font="Sans 8"><b>%-l:%M</b> %P&#xA;%a %B %-e</span>
-        TooltipFmt = %A %x
-        #Action = xmessage Please define some command &
-        ShowCalendar = false
-        ShowTooltip = true
-    }
-}
+#Plugin {
+#    type = tclock
+#    config {
+#        ClockFmt = <span font="DejaVu Sans Mono 8">%a %d/%m (%V) %R</span>
+#        #ClockFmt = %a %d/%m (%V) %R
+#        # 2 line view, time in bold above and date below
+#        # ClockFmt = <span font="Sans 8"><b>%-l:%M</b> %P&#xA;%a %B %-e</span>
+#        TooltipFmt = %A %x
+#        #Action = xmessage Please define some command &
+#        ShowCalendar = false
+#        ShowTooltip = true
+#    }
+#}
 
 # 'icons' plugin lets you customize window icons.
 # these changes apply to entire desktop
