Copy/paste optimized bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -86,51 +86,55 @@ set-option -g status-right '#T'
 
 # Mouse suport
 set-option -g mouse on
+
+# Left click on statusbar for windows sequence adjustment
 bind-key -n MouseDrag1Status swap-window -t=
 
+# Copy selected text in clipboard
+bind-key -T copy-mode-vi MouseDragEnd1Pane \
+        send-keys -X copy-pipe "xclip -i -selection primary"
+bind-key -T copy-mode-vi 'C-c' \
+        send-keys -X copy-pipe "xclip -i -selection primary"
+
+# Copy selected text in clipboard and exit copy-mode
 bind-key -T copy-mode-vi Enter \
         send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
 
 bind-key -T copy-mode-vi Escape \
         send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
 
-bind-key -T copy-mode-vi MouseDragEnd1Pane \
-        send-keys -X copy-pipe "xclip -i -selection primary"
+bind-key -T copy-mode-vi MouseDown3Pane \
+        send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
 
-bind-key -T copy-mode-vi MouseDown1Pane \
-        select-pane \; \
+# Exit copy-mode and past selected text
+bind-key -T copy-mode-vi MouseDown2Pane \
+        run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
+        paste-buffer \; \
         send-keys -X cancel
 
-# bind-key -n DoubleClick1Pane \
-#         select-pane \; \
-#         copy-mode \; \
-#         send-keys -X select-word \; \
-#         send-keys -X copy-pipe "xclip -i -selection primary"
+bind-key -T copy-mode-vi 'C-v' \
+        run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
+        paste-buffer \; \
+        send-keys -X cancel
+
+bind-key -n 'C-v' \
+        run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
+        paste-buffer
+
+# Usual text selections with mouse in copy-mode
+bind-key -T copy-mode-vi MouseDown1Pane \
+        select-pane \; \
+        send-keys -X clear-selection
 
 bind-key -T copy-mode-vi DoubleClick1Pane \
         select-pane \; \
         send-keys -X select-word \; \
         send-keys -X copy-pipe "xclip -i -selection primary"
 
-# bind-key -n TripleClick1Pane \
-#         select-pane \; \
-#         copy-mode \; \
-#         send-keys -X select-line \; \
-#         send-keys -X copy-pipe "xclip -i -selection primary"
-
 bind-key -T copy-mode-vi TripleClick1Pane \
         select-pane \; \
         send-keys -X select-line \; \
         send-keys -X copy-pipe "xclip -i -selection primary"
-
-# bind-key -n MouseDown2Pane \
-#         run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
-#         paste-buffer
-
-bind-key -T copy-mode-vi MouseDown2Pane \
-        run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
-        paste-buffer \; \
-        send-keys -X cancel
 
 # - Correct the 'colors' entry for terminals which support 88/256 colors;
 # - allow xterm titles in terminal window (XT);
