- vi-style key bindings for copying/pasting selected text; - right click on pane to toggle copy-mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -43,10 +43,14 @@ set-option -g history-limit 15360
 # Use vi key bindings in copy and choice modes
 set-window-option -g mode-keys vi
 bind-key 'Escape' copy-mode
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'r' send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
-bind-key 'p' paste-buffer
+bind-key -T copy-mode-vi 'Escape' send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+bind-key -T copy-mode-vi 'Enter'  send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+bind-key -T copy-mode-vi 'v'      send-keys -X begin-selection
+bind-key -T copy-mode-vi 'r'      send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi 'y'      send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+bind-key 'p' \
+        run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
+        paste-buffer
 
 # Window selection
 bind-key -n 'C-Tab' select-window -t :+1
@@ -88,46 +92,34 @@ set-option -g status-right '#T'
 set-option -g mouse on
 
 # Left click on statusbar for windows sequence adjustment
-bind-key -n MouseDrag1Status swap-window -t=
+bind-key -n 'MouseDrag1Status' swap-window -t=
 
 # Copy selected text in clipboard
-bind-key -T copy-mode-vi MouseDragEnd1Pane \
-        send-keys -X copy-pipe "xclip -i -selection primary"
-bind-key -T copy-mode-vi 'C-c' \
+bind-key -T copy-mode-vi 'MouseDragEnd1Pane' \
         send-keys -X copy-pipe "xclip -i -selection primary"
 
-# Copy selected text in clipboard and exit copy-mode
-bind-key -T copy-mode-vi Enter \
+# Toggle copy-mode
+bind-key -n 'MouseDown3Pane' copy-mode
+bind-key -T copy-mode-vi 'MouseDown3Pane' \
         send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
 
-bind-key -T copy-mode-vi Escape \
-        send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
-
-bind-key -T copy-mode-vi MouseDown3Pane \
-        send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
-
-# Exit copy-mode and past selected text
-bind-key -T copy-mode-vi MouseDown2Pane \
-        run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
-        paste-buffer \; \
-        send-keys -X cancel
-
-bind-key -T copy-mode-vi 'C-v' \
+# Past selected text
+bind-key -T copy-mode-vi 'MouseDown2Pane' \
         run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
         paste-buffer \; \
         send-keys -X cancel
 
 # Usual text selections with mouse in copy-mode
-bind-key -T copy-mode-vi MouseDown1Pane \
+bind-key -T copy-mode-vi 'MouseDown1Pane' \
         select-pane \; \
         send-keys -X clear-selection
 
-bind-key -T copy-mode-vi DoubleClick1Pane \
+bind-key -T copy-mode-vi 'DoubleClick1Pane' \
         select-pane \; \
         send-keys -X select-word \; \
         send-keys -X copy-pipe "xclip -i -selection primary"
 
-bind-key -T copy-mode-vi TripleClick1Pane \
+bind-key -T copy-mode-vi 'TripleClick1Pane' \
         select-pane \; \
         send-keys -X select-line \; \
         send-keys -X copy-pipe "xclip -i -selection primary"
