- slit color changed to eee8d5; - added selection indicator pixmaps in menu section

--- a/fluxbox/styles/custom/theme.cfg
+++ b/fluxbox/styles/custom/theme.cfg
@@ -24,11 +24,11 @@
 #  Slit
 #
 slit:                                   Flat Solid
-#slit.color:                             #EEE8D5
-slit.color:                             #073642
+slit.color:                             #EEE8D5
+#slit.color:                             #073642
 slit.borderWidth:                       0
-#slit.borderColor:                       #EEE8D5
-slit.borderColor:                       #073642
+slit.borderColor:                       #EEE8D5
+#slit.borderColor:                       #073642
 
 # ----------------------------------------------------------------------
 #  Toolbar
@@ -144,3 +144,7 @@ menu.title.textColor:                   #073642
 menu.title.justify:                     Center
 menu.titleHeight:                       12
 menu.roundCorners:                      TopLeft,TopRight,BottomLeft,BottomRight
+menu.selected.pixmap:                   selected.xpm
+menu.hilite.selected.pixmap:            selected_hilite.xpm
+menu.unselected.pixmap:                 unselected.xpm
+menu.hilite.unselected.pixmap:          unselected_hilite.xpm
