--- a/tmux.conf
+++ b/tmux.conf
@@ -185,8 +185,8 @@ set-window-option -g window-status-bell-style fg=cyan,bg=default,none
 set-window-option -g window-status-style fg=default,bg=default,none
 
 # Pane border
-set-option -g pane-border-fg default
-set-option -g pane-active-border-fg brightred
+set-option -g pane-border-style default
+set-option -g pane-active-border-style fg=brightred
 
 # Message text
 set-option -g message-style fg=black,bg=brightwhite,none
