(Almost) working copy/paste with mouse

--- a/tmux.conf
+++ b/tmux.conf
@@ -94,35 +94,43 @@ set-option -g mouse on
 # Left click on statusbar for windows sequence adjustment
 bind-key -n 'MouseDrag1Status' swap-window -t=
 
+# Enter copy-mode
+bind-key -n 'DoubleClick1Pane' \
+    copy-mode \; \
+    send-keys -X select-word \; \
+    send-keys -X copy-pipe-no-clear "xclip -i -selection primary"
+
 # Copy selected text in clipboard
 bind-key -T copy-mode-vi 'MouseDragEnd1Pane' \
-        send-keys -X copy-pipe "xclip -i -selection primary"
-
-# Toggle copy-mode
-bind-key -n 'MouseDown3Pane' copy-mode
-bind-key -T copy-mode-vi 'MouseDown3Pane' \
-        send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
-
-# Past selected text
-bind-key -T copy-mode-vi 'MouseDown2Pane' \
-        run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
-        paste-buffer \; \
-        send-keys -X cancel
-
-# Usual text selections with mouse in copy-mode
-bind-key -T copy-mode-vi 'MouseDown1Pane' \
-        select-pane \; \
-        send-keys -X clear-selection
+    send-keys -X copy-pipe-no-clear "xclip -i -selection primary"
 
 bind-key -T copy-mode-vi 'DoubleClick1Pane' \
-        select-pane \; \
-        send-keys -X select-word \; \
-        send-keys -X copy-pipe "xclip -i -selection primary"
+    select-pane \; \
+    send-keys -X select-word \; \
+    send-keys -X copy-pipe-no-clear "xclip -i -selection primary"
 
 bind-key -T copy-mode-vi 'TripleClick1Pane' \
-        select-pane \; \
-        send-keys -X select-line \; \
-        send-keys -X copy-pipe "xclip -i -selection primary"
+    select-pane \; \
+    send-keys -X select-line \; \
+    send-keys -X copy-pipe-no-clear "xclip -i -selection primary"
+
+# Past selected text from clipboard
+bind-key -T copy-mode-vi 'MouseDown2Pane' \
+    select-pane \; \
+    run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
+    paste-buffer \; \
+    send-keys -X cancel
+
+bind-key -n 'MouseDown2Pane' \
+    select-pane \; \
+    run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
+    paste-buffer \; \
+    send-keys -X cancel
+
+# Usual text selections with mouse in copy-mode
+# bind-key -T copy-mode-vi 'MouseDown1Pane' \
+#         select-pane \; \
+#         send-keys -X clear-selection
 
 # - Correct the 'colors' entry for terminals which support 88/256 colors;
 # - allow xterm titles in terminal window (XT);
